<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/thirdActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdActivityButton" />

    <Button
        android:id="@+id/secondActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondActivityButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/textView" />

    <EditText
        android:id="@+id/addTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/addTitleText" />

    <EditText
        android:id="@+id/addDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/addDescriptionText" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addButton" />

    <TextView
        android:id="@+id/addInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

</LinearLayout>